# NIM

./: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Gameplay.cpp  Gameplay.h  Player.cpp  Player.h  main.cpp
tests/: AI_test.cpp  Board_test.cpp  Gameplay_test.cpp  Player_test.cpp
